objects/CMPL123CME__MedDRA_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hierarchy_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>Hierarchy Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the High Level Group Term</description>
        <inlineHelpText>8-digit code to identify the High Level Group Term</inlineHelpText>
        <label>HLGT Code</label>
        <referenceTo>CMPL123CME__MedDRA_High_Level_Group_Term__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy</relationshipLabel>
        <relationshipName>MedDRA_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_name__c</fullName>
        <description>Full name of the High Level Group Term</description>
        <formula>CMPL123CME__hlgt_code__r.CMPL123CME__hlgt_name__c</formula>
        <inlineHelpText>Full name of the High Level Group Term</inlineHelpText>
        <label>HLGT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the High Level Term</description>
        <inlineHelpText>8-digit code to identify the High Level Term</inlineHelpText>
        <label>HLT Code</label>
        <referenceTo>CMPL123CME__MedDRA_High_Level_Term__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy</relationshipLabel>
        <relationshipName>MedDRA_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_name__c</fullName>
        <description>Full name of the High Level Term</description>
        <formula>CMPL123CME__hlt_code__r.CMPL123CME__hlt_name__c</formula>
        <inlineHelpText>Full name of the High Level Term</inlineHelpText>
        <label>HLT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_history__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MedDRA History/Version</description>
        <inlineHelpText>MedDRA History/Version</inlineHelpText>
        <label>MedDRA History</label>
        <referenceTo>CMPL123CME__MedDRA_Version_History__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy</relationshipLabel>
        <relationshipName>MedDRA_Hierarchy_Version</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__null_field__c</fullName>
        <description>This field is null</description>
        <inlineHelpText>This field is null</inlineHelpText>
        <label>Null field</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__primary_soc_fg__c</fullName>
        <description>Flag set to Y/N to indicate Primary SOC</description>
        <inlineHelpText>Flag set to Y/N to indicate Primary SOC</inlineHelpText>
        <label>Primary SOC Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the Preferred Term</description>
        <inlineHelpText>8-digit code to identify the Preferred Term</inlineHelpText>
        <label>PT Code</label>
        <referenceTo>CMPL123CME__MedDRA_Preferred_Term__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy</relationshipLabel>
        <relationshipName>MedDRA_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_name__c</fullName>
        <description>Full name of the Preferred Term</description>
        <formula>CMPL123CME__pt_code__r.CMPL123CME__pt_name__c</formula>
        <inlineHelpText>Full name of the Preferred Term</inlineHelpText>
        <label>PT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_soc_code__c</fullName>
        <description>The primary System Organ Class to which the Preferred Term is linked</description>
        <inlineHelpText>The primary System Organ Class to which the Preferred Term is linked</inlineHelpText>
        <label>PT SOC Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_abbrev__c</fullName>
        <description>System Organ Class abbreviation</description>
        <inlineHelpText>System Organ Class abbreviation</inlineHelpText>
        <label>SOC Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the System Organ Class</description>
        <inlineHelpText>8-digit code to identify the System Organ Class</inlineHelpText>
        <label>SOC Code</label>
        <referenceTo>CMPL123CME__MedDRA_System_Organ_Class__c</referenceTo>
        <relationshipLabel>MedDRA Hierarchy</relationshipLabel>
        <relationshipName>MedDRA_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_name__c</fullName>
        <description>Full name of the System Organ Class</description>
        <formula>CMPL123CME__soc_code__r.CMPL123CME__soc_name__c</formula>
        <inlineHelpText>Full name of the System Organ Class</inlineHelpText>
        <label>SOC Name</label>
        <type>Text</type>
    </fields>
    <label>MedDRA Hierarchy</label>
    <nameField>
        <label>MedDRA Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA Hierarchy</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__HLGT_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__hlgt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__hlgt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__HLT_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__hlt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__hlt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Preferred_Term_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__pt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__pt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SOC_Abbreviation_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__soc_abbrev__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__soc_abbrev__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SOC_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__soc_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__soc_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>